@@ -129,6 +129,7 @@ importFrom(boot,norm.ci)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange_)
 importFrom(dplyr,group_by_)
+importFrom(dplyr,n)
 importFrom(dplyr,progress_estimated)
 importFrom(dplyr,ungroup)
 importFrom(grDevices,as.raster)
@@ -166,6 +167,7 @@ importFrom(pegas,loci2genind)
 importFrom(phangorn,midpoint)
 importFrom(phangorn,upgma)
 importFrom(reshape2,melt)
+importFrom(rlang,"!!")
 importFrom(stats,as.dist)
 importFrom(stats,as.formula)
 importFrom(stats,dbinom)
